# rag-chunk-eval

./: LICENSE  README.md  pyproject.toml
src/rag_chunk_eval/: __init__.py  chunkers.py  eval.py
tests/: test_chunk.py
