[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
[project]
name = "rag-chunk-eval"
version = "0.1.0"
description = "Evaluate chunking strategies for RAG."
authors = [{name = "wwb-bill", email = "wwb.bill@qq.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]